fixed scroll in header and alignment of features section

--- a/_sass/1-base/base.scss
+++ b/_sass/1-base/base.scss
@@ -20,14 +20,14 @@ html {
   @include respond(laptop) {
     font-size: 70%;
   }
-  @include respond(tab-land) {  // width < 1200?
-    font-size: 56.25%;
-  }
-  @include respond(tab-port) { // width < 900?
-    font-size: 50%;
-  }
+  //@include respond(tab-land) {  // width < 1200?
+  //  font-size: 56.25%;
+  //}
+  //@include respond(tab-port) { // width < 900?
+  //  font-size: 50%;
+  //}
   @include respond(xl-phone) { // width < 900?
-    font-size: 40%;
+    font-size: 60%;
   }
 }
 
