--- a/_sass/2-modules/index.scss
+++ b/_sass/2-modules/index.scss
@@ -1,11 +1,11 @@
 .main {
   font-family: $font;
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   display: flex;
   justify-content: space-between;
   position: relative;
-  overflow-x: hidden;
+  overflow: hidden;
 
   @include respond(column2) {
     flex-direction: column;
@@ -25,9 +25,9 @@
       width: 100%;
       height: 100%;
       min-height: 53rem;
-      margin: 2rem auto;
-      //left: 0;
-      align-content: center;
+      left: 25%;
+
+      //align-items: center;
     }
 
     .logo {
@@ -147,6 +147,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
+  max-width: 40rem;
 
   &--1{
     width: 80%;
@@ -159,10 +160,10 @@
       display: block;
       position: absolute;
       left: -6.6rem;
-      top: -.7rem;
-      width: 4.8rem;
+      //top: -.7rem;
+      width: 5.2rem;
       height: 100%;
-      //overflow: visible;
+      overflow: visible;
     }
     &:first-child::before {
       background: url(../../assets/images/ic-files.svg) no-repeat center center;
@@ -173,19 +174,18 @@
     &:nth-child(3)::before {
       background: url(../../assets/images/ic-components.svg) no-repeat center center;
     }
+    &:nth-child(4)::before {
+      background: url(../../assets/images/ic-ae.svg) no-repeat center center;
+    }
+    &:nth-child(5)::before {
+      background: url(../../assets/images/ic-customizate.svg) no-repeat center center;
+    }
+    &:nth-child(6)::before {
+      background: url(../../assets/images/ic-focus.svg) no-repeat center center;
+    }
   }
 }
-.col--12 {
-  &:nth-child(1)::before {
-    background: url(../../assets/images/ic-ae.svg) no-repeat center center;
-  }
-  &:nth-child(2)::before {
-    background: url(../../assets/images/ic-customizate.svg) no-repeat center center;
-  }
-  &:nth-child(3)::before {
-    background: url(../../assets/images/ic-focus.svg) no-repeat center center;
-  }
-}
+
 
 .icon {
   width: 3rem;
